calendarItemDetails: fix content having extra whitespace in Firefox

--- a/client/app/calendar/calendarItemDetails.styl
+++ b/client/app/calendar/calendarItemDetails.styl
@@ -38,6 +38,14 @@
 	.row:last-child
 		margin-bottom: 0
 
+	#contentRow
+		div:nth-child(2)
+			white-space: pre-wrap
+
+		div:nth-child(2):before,
+		div:nth-child(2):after
+			display: none
+
 	#peopleCarousel
 		white-space: nowrap
 		overflow-x: auto
